--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 apipkg==1.4
 blinker==1.4
+Cerberus==0.8.1
 click==6.6
 colorama==0.3.7
 coverage==4.2
+Eve==0.5.3
+Eve-SQLAlchemy==0.4.1
+Events==0.2.1
 execnet==1.4.1
-Flask==0.11.1
+Flask==0.10.1
 Flask-Login==0.3.2
 Flask-Mail==0.9.1
 Flask-Principal==0.4.0
 Flask-Security==1.7.5
+Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
 itsdangerous==0.24
 Jinja2==2.8
@@ -18,12 +23,16 @@ pep8==1.7.0
 pluggy==0.3.1
 py==1.4.31
 pyflakes==1.3.0
+pymongo==2.9.3
 pytest==3.0.2
 pytest-cache==1.0
 pytest-cov==2.3.1
 pytest-flakes==1.0.1
 pytest-pep8==1.0.6
+requests==2.11.1
+simplejson==3.8.2
+SQLAlchemy==1.0.15
 tox==2.3.1
 virtualenv==15.0.3
-Werkzeug==0.11.11
+Werkzeug==0.10.4
 WTForms==2.1
