Requirements divided to user and develop

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include README.md
 include requirements.txt
+include requirements-dev.txt
 include tox.ini
 recursive-include tests *
 recursive-exclude tests/__pycache__ *
